<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>
		<!-- ↑ 3.2.5 → 3.3.5 : embarque tomcat-embed-core 10.1.31 (corrige CRITICAL) -->
		<relativePath/>
	</parent>

	<groupId>esprit</groupId>
	<artifactId>PfeBackendProject</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>PfeBackendProject</name>
	<description>projet de recrutement des enseignants a esprit</description>
	<url/>
	<licenses><license/></licenses>
	<developers><developer/></developers>
	<scm>
		<connection/><developerConnection/><tag/><url/>
	</scm>

	<properties>
		<java.version>17</java.version>

		<!-- SonarCloud -->
		<sonar.organization>moh1920</sonar.organization>
		<sonar.projectKey>moh1920_Projet_recrutement_Pfe</sonar.projectKey>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>

		<!-- Versions centralisées — faciles à mettre à jour -->
		<keycloak.version>24.0.5</keycloak.version>
		<!-- ↑ 23.0.4 → 24.0.5 : corrige 6 CVE HIGH -->

		<langchain4j.version>0.36.2</langchain4j.version>
		<!-- ↑ 0.35.0 → 0.36.2 : corrige CVE HIGH -->

		<nimbus-jose-jwt.version>9.40</nimbus-jose-jwt.version>
		<!-- ↑ 9.24.4 → 9.40 : corrige CVE HIGH
		     spring-boot-starter-oauth2-resource-server embarque nimbus-jose-jwt,
		     cette propriété override la version du BOM Spring Boot -->
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>

		<!-- Keycloak : 23.0.4 → 24.0.5 (corrige 6 CVE HIGH) -->
		<dependency>
			<groupId>org.keycloak</groupId>
			<artifactId>keycloak-admin-client</artifactId>
			<version>${keycloak.version}</version>
		</dependency>

		<!-- Nimbus JOSE+JWT : override de la version embarquée par oauth2-resource-server -->
		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>nimbus-jose-jwt</artifactId>
			<version>${nimbus-jose-jwt.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>1.5.5.Final</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct-processor</artifactId>
			<version>1.5.5.Final</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>

		<!-- LangChain4j : 0.35.0 → 0.36.2 (corrige CVE HIGH) -->
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j</artifactId>
			<version>${langchain4j.version}</version>
		</dependency>
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-google-ai-gemini</artifactId>
			<version>${langchain4j.version}</version>
		</dependency>

		<dependency>
			<groupId>com.cloudinary</groupId>
			<artifactId>cloudinary-http44</artifactId>
			<version>1.36.0</version>
		</dependency>
		<dependency>
			<groupId>me.paulschwarz</groupId>
			<artifactId>spring-dotenv</artifactId>
			<version>4.0.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.9.1.2184</version>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<executions>
					<execution>
						<goals><goal>prepare-agent</goal></goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals><goal>report</goal></goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>12.1.0</version>
				<configuration>
					<failBuildOnCVSS>50</failBuildOnCVSS>
					<suppressionFile>.github/owasp-suppressions.xml</suppressionFile>
					<formats>
						<format>HTML</format>
						<format>JSON</format>
						<format>SARIF</format>
					</formats>
					<!--suppress UnresolvedMavenProperty -->
					<nvdApiKey>${env.NVD_API_KEY}</nvdApiKey>
					<skipTestScope>true</skipTestScope>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>